src/tests/cases/snapshots/diskonaut__tests__cases__ui__delete_folder_small_window.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[0]"
---
 12.0K | /tmp/diskonaut_tests/delete_folder_small_wikndow   
┌──────────────────────────────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                          file2                           │
│                                                          │
│                                                          │
│                        4.0K (33%)                        │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
├──────────────────────────────────────────────────────────┤
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                          file3                           │
│                                                          │
│                        4.0K (33%)                        │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
├──────────────────────────────────────────────────────────┤
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│               subfolder1/ (+1 descendants)               │
│                                                          │
│                                                          │
│                        4.0K (33%)                        │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
                                          (x = Small files) 
 ←↓↑→/<ENTER>/<ESC>: navigate, <DELETE>: del                

