src/tests/cases/snapshots/diskonaut__tests__cases__ui__delete_folder_small_window_no_confirmation-2.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[1]"
---
                                                            
                                                            
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████file2███████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ████████████████████████4.0K (33%)████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
 SELECTED: file2 (4.0K)                                     
                                                            

