src/tests/cases/snapshots/diskonaut__tests__cases__ui__delete_folder_small_window_no_confirmation-9.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[9]"
---
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
               ┌─────────────────────────────┐              
               │                             │              
               │                             │              
               │        Really quit?         │              
               │                             │              
               │                             │              
               │                             │              
               │                             │              
               │            (y/n)            │              
               │                             │              
               └─────────────────────────────┘              
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            

